apps/dockerregistry/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: docker-registry
  labels:
    enable-reloader-operator-watching: "true"
