apps/dockerregistry/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry-s3
  labels:
    app.kubernetes.io/name: docker-registry-s3
spec:
  selector:
    app.kubernetes.io/name: docker-registry-s3
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
    - name: metrics
      port: 5001
      targetPort: 5001
  type: ClusterIP
