apps/dockerregistry/httproute.yaml
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: dockerregistry-httproute
# spec:
#   parentRefs:
#     - name: default-https-gateway
#       namespace: istio-system
#   hostnames:
#     - registry.home.alden.ai
#   rules:
#   - backendRefs:
#     - name: docker-registry
#       port: 5000
#     matches:
#     - path:
#         type: PathPrefix
#         value: /
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: dockerregistry-s3-httproute
# spec:
#   parentRefs:
#     - name: default-https-gateway
#       namespace: istio-system
#   hostnames:
#     - registry-s3.home.alden.ai
#   rules:
#   - backendRefs:
#     - name: docker-registry-s3
#       port: 5000
#     matches:
#     - path:
#         type: PathPrefix
#         value: /
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dockerregistry-httproute
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - registry.home.alden.ai
  rules:
  - backendRefs:
    - name: docker-registry-s3
      port: 5000
      group: ''
      kind: Service
      weight: 1
    matches:
    - path:
        type: PathPrefix
        value: /
