apps/dockerregistry/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: registry-virtualservice
spec:
  hosts:
    - registry.home.alden.ai
  gateways:
    - istio-system/default-https-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: docker-registry.docker-registry.svc.cluster.local
            port:
              number: 5000
